# lightdash-dlt

./: .gitignore  AGENTS.md  README.md  __deployment__.py  pipeline.py  pyproject.toml  requirements.txt
.agents/skills/deploy-run-sample-pipeline/: SKILL.md
.agents/skills/dlthub-router/: SKILL.md
.agents/skills/init-dlthub-workspace/: SKILL.md
.agents/skills/one-shot-workflow/: SKILL.md
.codex/: config.toml
.dlt/: config.toml
dbt_project/: dbt_project.yml  profiles_motherduck.yml
dbt_project/models/marts/: dim_customers.sql  dim_products.sql  fact_orders.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
