[project]
name = "lightdash-dlt"
version = "0.1.0"
description = "Minimal dltHub workspace"
requires-python = ">=3.12"
dependencies = [
    "dlt[hub,deltalake]>=1.27.2",
    "dlthub[mcp]",
    "duckdb<1.4.3",
    "marimo>=0.23.8",
    "altair",
    "pyarrow>=24.0.0",
    "ibis-framework[duckdb]>=12.0.0",
    "s3fs",
]

[tool.uv.sources]
